z-index fixed

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     height: 70px;
     background: hsla(0,0%,100%,.98);
     box-shadow: 0 -2px 10px 0 rgba(0,0,0,.15);
+    z-index: 9999;
 }
 .menu {
     font-size: 16px;
